# typer-to-textual

./: .gitignore  README.md  main.py  pyproject.toml  style.css  test.py  tui.py  typer_to_textual.py
typer_to_textual/: command_options.py  homepage.py  main.py  show.py  style.css
